# BioFEM-IA

./: .gitignore  CMakeLists.txt  Doxyfile  ELASTICITY.py  PyCaller.c  PyCaller_8c.html  PyCaller_8c.js  PyCaller_8c__incl.map  PyCaller_8c__incl.md5  PyCaller_8c_source.html  PyCaller_8h.html  PyCaller_8h.js  PyCaller_8h__dep__incl.map  PyCaller_8h__dep__incl.md5  PyCaller_8h__incl.map  PyCaller_8h__incl.md5  PyCaller_8h_source.html  README  README.md  README_8md.html  act__variables_8h.html  act__variables_8h.js  act__variables_8h__dep__incl.map  act__variables_8h__dep__incl.md5  act__variables_8h__incl.map  act__variables_8h__incl.md5  act__variables_8h_source.html  act_variables.h  active__strain_8c.html  active__strain_8c.js  active__strain_8c__incl.map  active__strain_8c__incl.md5  active__strain_8c_a04fa5da4f55d0663ad5ec7a3534de0af_cgraph.map  active__strain_8c_a04fa5da4f55d0663ad5ec7a3534de0af_cgraph.md5  active__strain_8c_a0587d6e1cf013dd0f8c6fcd0feaac62b_icgraph.map  active__strain_8c_a0587d6e1cf013dd0f8c6fcd0feaac62b_icgraph.md5  active__strain_8c_a10582f130c0a0d6bb1514569bb154352_icgraph.map  active__strain_8c_a10582f130c0a0d6bb1514569bb154352_icgraph.md5  active__strain_8c_a12d870e5382d879992dcc9f9a921318f_cgraph.map  active__strain_8c_a12d870e5382d879992dcc9f9a921318f_cgraph.md5  (+1343 more)
.github/workflows/: docs.yml
config/: README.md  cpu.mk  direct-cuda.mk  dmplex.mk  kokkos-cuda.mk  kokkos-openmp.mk  load-kokkos-cuda.sh  site.cfg.template
docs/: Doxyfile  PARALLELISM.md  dmplex_geom.tex  lv_geometry_theory.tex
docs/config/: Doxyfile
docs_build/: doxygen.warnings
examples/: README.md  plot_mesh_backend_comparison.py
examples/cuda_test/: jobfile.slurm  out
examples/dmplex_mesh_sweep/: generate_mesh_cases.py  plot_mesh_scaling.py  submit_mesh_sweep.py
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx128_ny96/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx160_ny120/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx16_ny12/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx256_ny192/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx32_ny24/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx384_ny288/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx48_ny36/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx512_ny384/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx640_ny480/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx64_ny48/: jobfile.slurm
examples/dmplex_mesh_sweep/mesh_Lx1.2_Ly0.9_nx96_ny72/: jobfile.slurm
examples/dmplex_scaling/: jobfile.slurm  plot_dmplex_scaling.py  submit_ntasks_sweep.py
examples/dmplex_test/: jobfile.slurm
examples/manufactured_test_export/: jobfile.slurm
examples/manufactured_test_import/: jobfile.slurm  log  log_new_snes_1e-1_C33_5_d_0  log_new_snes_1e-1_C33_5_d_1  log_new_snes_1e-1_C33_5_d_1e1  log_new_snes_1e-1_C33_5_d_1e2  log_new_snes_1e-1_C33_5_d_1e3  log_new_snes_1e-1_C33_5_d_5  log_new_snes_1e-1_C33_5_d_5e-1
examples/mesh_Lx1.2_Ly0.9_nx13_ny10/: jobfile.slurm  out
include/: PyCaller.h  act_variables.h  active_strain.h  cuda_bridge.h  cuda_processes.h  dmplex_geom.h  dmplex_types.h  globals.h  kokkos_bridge.h  kokkos_processes.h  lv_geometry.h  manufactured_active_strain.h  math.h  muscle_activation.h  types.h  variables.h
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+64 more)
src/: active_strain.c  bcs.c  bending.c  cuda_kernel.cu  cuda_processes.c  cuda_stub.c  cuda_wrapper.cpp  dmplex_geom.c  external.c  inverse.c  io.c  kokkos_geom.cpp  kokkos_processes.c  kokkos_stub.c  lv_geometry.c  main.c  manufactured_active_strain.c  manufactured_active_strain_b.c  material.c  material_NonlinearCantilever.c  muscle_activation.c  y
